# Video2VisualPage

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml
docs/: llm-monitoring.md  release-check.md  step-command-output-summary.md  任务执行记录清单.md  视频转网页多步骤落地总览.md  视频转网页设计.md  项目整体流程架构图.md
docs/change/: 20260627-1132-章节写作按小节分批调用改造.md
docs/designs/chapter-subsection-agent/: README.md
docs/designs/global-outline-agent/: README.md
docs/designs/outline-planning-refactor/: README.md
docs/stages/: README.md
docs/stages/00_init/: README.md
docs/stages/01_media_probe/: README.md
docs/stages/02_shot_split/: README.md
docs/stages/03_subtitle_extract/: README.md
docs/stages/04_subtitle_align/: README.md
docs/stages/05_shot_package/: README.md
docs/stages/06_shot_understanding/: README.md
docs/stages/07_summary_reduce/: README.md
docs/stages/08_outline_plan/: README.md
docs/stages/09_chapter_write/: README.md
docs/stages/10_static_render/: README.md
docs/stages/11_qa/: README.md
tests/: manual_model_smoke.py  test_chapter_planning.py  test_chapter_subsection_write.py  test_chapter_subsections.py  test_chapter_write_batches.py  test_chapter_write_tags.py  test_cli_steps.py  test_integration_pipeline.py  test_llm_monitoring.py  test_pipeline_freshness.py  test_qa_repair.py  test_shot_package.py  test_shot_understanding.py  test_state.py  test_static_render.py  test_storage.py  test_subtitle_align.py  test_summary_reduce_global_outline.py  test_timecode.py
utils/PaddleOCR-main/: .gitignore  README.md  pyproject.toml  requirements.txt
utils/PaddleOCR-main/models/PP-OCRv6_medium_det/: .msc  .mv  README.md  configuration.json
utils/PaddleOCR-main/models/PP-OCRv6_medium_rec/: .msc  .mv  README.md
utils/PaddleOCR-main/paddleocr/: __init__.py  _cli.py  _common_args.py
utils/PaddleOCR-main/paddleocr/_api_client/: __init__.py  _async_http.py  _async_poller.py  _core.py  _http.py  _naming.py  _poller.py  _resources.py  async_client.py  cli.py  client.py  errors.py  models.py  results.py
utils/PaddleOCR-main/paddleocr/_doc2md/: __init__.py  core.py
utils/PaddleOCR-main/paddleocr/_doc2md/converters/: __init__.py  docx.py  pptx.py  xlsx.py
utils/PaddleOCR-main/paddleocr/_doc2md/math/: __init__.py
utils/PaddleOCR-main/paddleocr/_models/: text_detection.py  text_recognition.py
utils/PaddleOCR-main/paddleocr/_pipelines/: _patch_layout_parsing.py  ocr.py  paddleocr_vl.py  pp_structurev3.py
utils/PaddleOCR-main/paddleocr/_utils/: langs.py  naming.py
utils/opencv-shot-segmenter/: .gitignore  README.md  pyproject.toml
utils/opencv-shot-segmenter/opencv_shot_segmenter/: __init__.py  cli.py  detector.py
utils/opencv-shot-segmenter/tests/: test_detector.py
utils/subtitle-extractor/: .gitignore  README.md  pyproject.toml  requirements.txt
utils/subtitle-extractor/subtitle_extractor/: __init__.py  asr_base.py  bcut_asr.py  cli.py  ffmpeg.py  formats.py  pipeline.py
video2visualpage/: cli.py  config.py  constants.py  env.py  paths.py  pipeline.py  progress.py  state.py
video2visualpage/models/: __init__.py  adapter.py  ocr.py
video2visualpage/monitoring/: __init__.py  llm.py
video2visualpage/prompts/: chapter_subsection_prompt.txt  chapter_subsection_writer_prompt.txt  chapter_writer_prompt.txt  global_outline_prompt.txt  json_repair_prompt.txt  outline_planner_prompt.txt  outline_prompt.txt  shot_analysis_prompt.txt
video2visualpage/render/: __init__.py  templates.py
video2visualpage/schemas/: __init__.py  contracts.py
video2visualpage/stages/: __init__.py  chapter_write.py  init_stage.py  media_probe.py  outline_plan.py  qa.py  shot_package.py  shot_split.py  shot_understanding.py  static_render.py  subtitle_align.py  subtitle_extract.py  summary_reduce.py
video2visualpage/storage/: __init__.py  json_store.py
video2visualpage/tools/: media_probe.py
video2visualpage/utils/: eventlog.py  hashing.py  timecode.py  validation.py
