[build-system]
requires = ["setuptools==72.1.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "paddleocr"
# After each version release, the version number needs to be incremented
dynamic = ["version"]
description = "Awesome multilingual OCR and document parsing toolkits based on PaddlePaddle"
authors = [
    {name = "PaddlePaddle", email = "paddleocr@baidu.com"},
]
maintainers = [
    {name = "PaddlePaddle", email = "paddleocr@baidu.com"},
]
readme = "README.md"
requires-python = ">=3.8"
keywords = [
    "ocr",
    "textdetection",
    "textrecognition",
    "paddleocr",
    "chineseocr",
    "pp-ocr",
    "pp-structure",
    "document-parsing",
    "pdf2markdown",
    "doc2markdown",
    "docx2markdown",
    "kie",
    "pp-chatocr",
    "document-translation",
    "rag"
]
license = {text = "Apache License 2.0"}
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Natural Language :: Chinese (Simplified)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
dependencies = [
    "paddlex[ocr-core]>=3.7.0,<3.8.0",
    "PyYAML>=6",
    "requests",
    "aiohttp>=3.8.0",
    "typing-extensions>=4.12",
]

[project.urls]
homepage = "https://github.com/PaddlePaddle/PaddleOCR"
documentation = "https://github.com/PaddlePaddle/PaddleOCR/blob/main/README.md"
repository = "https://github.com/PaddlePaddle/PaddleOCR.git"
issues = "https://github.com/PaddlePaddle/PaddleOCR/issues"

[project.scripts]
paddleocr = "paddleocr.__main__:console_entry"

[project.optional-dependencies]
doc-parser = ["paddlex[ocr,genai-client]>=3.7.0,<3.8.0"]
ie = ["paddlex[ie]>=3.7.0,<3.8.0"]
trans = ["paddlex[trans]>=3.7.0,<3.8.0"]
doc2md = ["python-docx>=0.8.11", "python-pptx>=0.6.21", "openpyxl>=3.0.0", "pylatexenc>=2.10,<3"]
all = ["paddlex[ocr,genai-client,ie,trans]>=3.7.0,<3.8.0", "python-docx>=0.8.11", "python-pptx>=0.6.21", "openpyxl>=3.0.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["paddleocr", "paddleocr.*"]
namespaces = false

[tool.setuptools_scm]
version_scheme = 'release-branch-semver'
git_describe_command = ["git", "describe", "--dirty", "--tags", "--long", "--match", "v[0-9]*"]

[tool.pytest.ini_options]
markers = [
    "resource_intensive: mark a test as resource intensive",
    "py38_incompatible: test requires extras or deps that need Python 3.9+"
]
addopts = "-m 'not resource_intensive'"
